# college_visualization

./: pyproject.toml
backend/: api.py  db.py
web/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: index.tsx
web/src/components/: AutoComplete.tsx  Footer.tsx  Nav.tsx
web/src/components/college-job/: EmploymentInfoCharts.tsx
web/src/hooks/: useFetch.ts
web/src/pages/: college-job.tsx  college-type.tsx  index.tsx  major-job.tsx  scores.tsx
